# synkro

./: biome.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard_monitor.rs  commands.rs  errors.rs  fs_watcher.rs  iroh_fns.rs  iroh_setup.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: blob_commands.rs  clipboard_commands.rs  gossip_commands.rs  mod.rs  node_commands.rs  setup_commands.rs
src-tauri/src/iroh_fns/: blob_ops.rs  gossip_ops.rs  mod.rs  setup.rs  tickets.rs
src/components/ui/: radio-group.tsx
src/hooks/: useFsEvents.ts
src/pages/: Home.tsx  Onboarding.tsx
