[package]
name = "fastsync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fastsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh = { version = "0.35.0", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
futures = "0.3.31"
tokio = "1.45.1"
tracing = "0.1.41"
thiserror = "2.0.12"
notify = "8.0.0"
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
bytes = "1.10.1"
iroh-blobs = "0.35.0"
iroh-bytes = "0.15.0"
iroh-gossip = "0.35.0"
log = "0.4.27"
futures-lite = "2.6.0"
blake3 = "1.8.2"
rand = "0.8.5"
tauri-plugin-log = "2.4.0"
fmt = "0.1.0"
data-encoding = "2.9.0"
futures-util = "0.3.31"
